fixed composite materials showing air as fluid
Took 42 minutes

Took 35 seconds